test/flowanalysis/recursion/rec_fun-2.good
Error: Unable to resolve return type of function 'g' (rec_fun-2.chpl:2)
Error: Called recursively at this point (rec_fun-2.chpl:5)
